# SuperTerminal

./: .gitignore  CONTRIBUTING.md  Debugging.md  LICENSE  NOTICE  README.md  SECURITY.md  SUPERTERMINAL_CONCEPT.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: release-windows.yml
docs/: index.html  styles.css
docs/assets/: .gitkeep
scripts/: rename-windows-installer.mjs
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/commands/: app.rs  context.rs  diagnostics.rs  installation.rs  mod.rs  project.rs  secrets.rs  terminal.rs  tools.rs
src-tauri/src/services/: command_resolver.rs  file_scanner.rs  install_runner.rs  install_validator.rs  mod.rs  pty_service.rs  tool_detection.rs  tool_secrets.rs
src/app/: App.tsx  BootFallback.tsx  ErrorBoundary.tsx
src/components/context/: ContextInjectionPanel.tsx
src/components/history/: SessionHistoryPanel.tsx
src/components/layout/: AppShell.tsx  Header.tsx  ProjectSidebar.tsx  StatusPanel.tsx
src/components/project/: FilePreview.tsx  FileTree.tsx  FileTreeNode.tsx
src/components/settings/: SettingsPanel.tsx
src/components/terminal/: SessionPanel.tsx  TerminalPlaceholder.tsx  (+4 more)
src/lib/: dateUtils.ts  mockData.ts  statusIcons.ts  types.ts  utils.ts
src/stores/: contextStore.ts  historyStore.ts  installStore.ts  projectStore.ts  secretEnvStore.ts  sessionStore.ts  terminalPreferencesStore.ts  toolStore.ts
src/styles/: globals.css
(+11 files in other folders)
