[package]
name = "superterminal"
version = "0.0.1"
description = "One desktop terminal interface for AI coding CLIs."
authors = ["SuperTerminal"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
