[package]
name = "superterminal"
version = "0.1.2-alpha"
description = "One desktop terminal interface for AI coding CLIs."
authors = ["SuperTerminal"]
license = "Apache-2.0"
repository = "https://github.com/Zemulax/SuperTerminal"
homepage = "https://zemulax.github.io/SuperTerminal/"
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
keyring = "2"
